--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,12 @@ form {background-color: cyan;
     border: round 5px lemonchiffon;}
 
 #formp {font-style: italic;
-        color: aqua;}
+        color: gold;}
 
 #submit {text-align: center;}
 
 legend {font-weight: bold;
-        color: deepskyblue;}
+        color: #EBA800;}
 
 /*there is an example of border*/
 #submit {color: crimson;
