contact and css

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ form {background-color: cyan;
     border: round 5px lemonchiffon;}
 
 #formp {font-style: italic;
-        color: gold;}
+        color: #CC7722;}
 
 #submit {text-align: center;}
 
