--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ form {background-color: lemonchiffon;
 #submit {text-align: center;}
 
 legend {font-weight: bold;
-        color: darkturquoise;}
+        color: navy;}
 
 /*there is an example of border*/
 #submit {color: crimson;
